# personal_crm

./: .gitignore  001_initial_tables.sql  README.md  main.py  pyproject.toml
anonymized_data/: crm_anonymized_data.xlsx
powerbi/: crm_dashboard.pbix
python/: AnonymizeData.py  import_to_mysql.py
real_data/: crm_template.xlsx
sql/: 001_create_tables.sql  001_initial_tables.sql  002_add_thank_you_required.sql  create_db.sql
